add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="english" >
     <head>
+        <link rel="stylesheet" href="style.css" />
         <title>My Happy Place</title>
     </head>   
     <body>
