--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="english" >
+    <script src="script.js"></script>
     <head>
         <link rel="stylesheet" href="style.css" />
         <title>My Happy Place</title>
